glx/testdata/invalid/comprehensive-broken-references/persons/person-john.glx
persons:
  person-john:
    properties:
      given_name: "John"
      family_name: "Smith"

